--- a/start/inventory/pom.xml
+++ b/start/inventory/pom.xml
@@ -16,6 +16,7 @@
         <liberty.var.default.http.port>9080</liberty.var.default.http.port>
         <liberty.var.default.https.port>9443</liberty.var.default.https.port>
         <liberty.var.default.context.root>/inventory</liberty.var.default.context.root>
+        <liberty.var.client.https.port>9444</liberty.var.client.https.port>
         <postgresql.version>42.4.0</postgresql.version>
     </properties>
 
